--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,12 +1,15 @@
 body {
-    background-color: #0099ff;
+    background-color: #9cbae8;
 }
 
 .wrapper {
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    margin-right: 30px;
 }
+
+
 
 .loginContainer {
     padding: 20px;
@@ -36,9 +39,13 @@ input[type="password"] {
 }
 
 input[type="submit"] {
-    background-color: #0099ff;
+    background-color: #518be1;
     color: #fff;
     border: none;
     border-radius: 2px;
     margin-bottom: 10px;
+}
+
+a{
+    color: #8fb8f5;
 }
