--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 :root {
-    --blue: #1FA2F1;
-    --blueLight: #9BD1F9;
+    --blue: #7589a8;
+    --blueLight: #9cbae8;
     --blueBackground: rgba(212, 237, 255, 0.6);
     --buttonHoverBg: #d4edff;
     --lightGrey: rgb(230, 236, 240);
@@ -9,7 +9,7 @@
     --greyButtonText: rgba(0,0,0,0.34);
     --red: rgb(226,34,94);
     --redBackground: rgba(226,34,94,0.1);
-    --green: rgb(23,191,99);
+    --green: rgb(94, 139, 182);
     --greenBackground: rgba(23,191,99,0.1);
 }
 
@@ -96,8 +96,7 @@ button span {
 
 .mainSectionContainer {
     padding:  0;
-    border-left: 1px solid var(--lightGrey);
-    border-right: 1px solid var(--lightGrey);
+    
     display: flex;
     flex-direction: column;
 }
@@ -118,7 +117,7 @@ button span {
 .postFormContainer {
     display: flex;
     padding: var(--spacing);
-    border-bottom: 10px solid rgb(230, 236, 240);
+   
     flex-shrink: 0;
 }
 
@@ -171,9 +170,11 @@ button span {
     display: flex;
     flex-direction: column;
     padding: var(--spacing);
+    word-break: break-all;
     cursor: pointer;
-    border-bottom: 1px solid var(--lightGrey);
+    
     flex-shrink: 0;
+    
 }
 
 .mainContentContainer {
@@ -263,6 +264,7 @@ button span {
 .post.largeFont .postBody,
 .post.largeFont .postFooter {
     font-size: 23px;
+    word-break: break-all
 }
 
 .postContentContainer .header {
@@ -617,7 +619,7 @@ button span {
     border-radius: 18px;
     border: none;
     padding: 8px 12px;
-    height: 38px;
+    height: 100px;
 }
 
 .chatContainer .footer button {
@@ -828,3 +830,4 @@ button span {
 #notificationList .active {
     background-color: white;
 }
+
