--- a/views/landing.pug
+++ b/views/landing.pug
@@ -6,7 +6,7 @@ block content
         .right
             .content    
                 h1 Capital Coin
-                p  filling the vaccum of space with knowledge
+                p  filling the vaccum of space
                 a(href="/login") Login 
                 a(href="/register") Signup 
 
