--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -3,7 +3,7 @@ mixin createPostForm(userLoggedIn)
         .userImageContainer
             img(src=userLoggedIn.profilePic, alt="User's profile picture")
         .textareaContainer
-            textarea#postTextarea(placeholder="What's happening?")
+            textarea#postTextarea(placeholder="What's the 411")
             .buttonsContainer
                 button#submitPostButton(disabled="") Post
 
